--- a/Proyecto_EE501/Properties/Resources.resx
+++ b/Proyecto_EE501/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="SV_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SV_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="goku pelado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\goku pelado.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo501" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo501.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="goku pelado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\goku pelado.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fondo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fondo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
